--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
 			<version>${bukkitVersion}</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>net.milkbowl.vault</groupId>
+			<artifactId>Vault</artifactId>
+			<version>1.2.27</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
