--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,14 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<addMavenDescriptor>false</addMavenDescriptor>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>com.github.goldin</groupId>
 				<artifactId>copy-maven-plugin</artifactId>
 				<version>0.2.5</version>
@@ -102,10 +110,26 @@
 							<resources>
 								<resource>
 									<description>Copy artifact to another directory</description>
-									<targetPath>${basedir}/../DEBUGSERVER/TekkitLite/plugins</targetPath>
+									<targetPath>/KenetiServerProject/DEBUGSERVER/TekkitLite/plugins</targetPath>
 									<directory>${project.build.directory}</directory>
 									<includes>
-										<include>ChatControl.jar</include>
+										<include>${project.artifactId}.jar</include>
+									</includes>
+								</resource>
+								<resource>
+									<description>Copy artifact to another directory</description>
+									<targetPath>/KenetiServerProject/DEBUGSERVER/Vanilla147/plugins</targetPath>
+									<directory>${project.build.directory}</directory>
+									<includes>
+										<include>${project.artifactId}.jar</include>
+									</includes>
+								</resource>
+								<resource>
+									<description>Copy artifact to another directory</description>
+									<targetPath>K:/GAME/SERVERS/Plugins-Master</targetPath>
+									<directory>${project.build.directory}</directory>
+									<includes>
+										<include>${project.artifactId}.jar</include>
 									</includes>
 								</resource>
 							</resources>
@@ -114,6 +138,18 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<targetPath>.</targetPath>
+				<filtering>true</filtering>
+				<directory>${basedir}/src/main/resources</directory>
+				<includes>
+					<include>*.yml</include>
+					<include>*.properties</include>
+					<include>*.txt</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 	<url>http://www.spigotmc.org/resources/chatcontrol.271/</url>
